--- a/index.html
+++ b/index.html
@@ -1,37 +1,79 @@
-// Smooth scrolling for navigation
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth'
-        });
-    });
-});
-
-// Mobile menu toggle
-function toggleMenu() {
-    const menu = document.getElementById('mobile-menu');
-    menu.classList.toggle('hidden');
-}
-
-// Add to Cart simulation
-function addToCart(product) {
-    alert(`${product} added to cart! (Note: This is a demo. Integrate with a real e-commerce backend.)`);
-}
-
-// Fade-in animation on scroll
-const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-        if (entry.isIntersecting) {
-            entry.target.classList.add('visible');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jamilas Fragrance | Luxury Perfumes & Attars</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Poppins', sans-serif; }
+        .serif { font-family: 'Playfair Display', serif; }
+        .hero-bg {
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1541643600914-78b084683601?auto=format&fit=crop&q=80');
+            background-size: cover;
+            background-position: center;
         }
-    });
-});
-document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
+    </style>
+</head>
+<body class="bg-stone-50 text-stone-900">
 
-// Contact form submission
-document.getElementById('contact-form').addEventListener('submit', function(e) {
-    e.preventDefault();
-    alert('Thank you for your message! We will get back to you soon.');
-    this.reset();
-});
+    <nav class="flex justify-between items-center p-6 bg-white shadow-sm sticky top-0 z-50">
+        <h1 class="serif text-2xl font-bold tracking-widest text-yellow-700">JAMILAS FRAGRANCE</h1>
+        <div class="space-x-6 hidden md:block">
+            <a href="#" class="hover:text-yellow-700">Home</a>
+            <a href="#collection" class="hover:text-yellow-700">Collection</a>
+            <a href="#contact" class="hover:text-yellow-700">Contact</a>
+        </div>
+        <button class="bg-yellow-700 text-white px-5 py-2 rounded-full text-sm">Shop Now</button>
+    </nav>
+
+    <header class="h-[80vh] hero-bg flex items-center justify-center text-center text-white px-4">
+        <div>
+            <h2 class="serif text-5xl md:text-7xl mb-4">Pure Essence of Luxury</h2>
+            <p class="text-lg md:text-xl mb-8 font-light">Experience the finest Attars and French Perfumes</p>
+            <a href="#collection" class="border-2 border-white px-8 py-3 hover:bg-white hover:text-black transition uppercase tracking-widest">Explore Collection</a>
+        </div>
+    </header>
+
+    <section id="collection" class="py-20 px-6 max-w-7xl mx-auto">
+        <h3 class="serif text-4xl text-center mb-16">Our Signature Collections</h3>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+            <div class="bg-white p-4 shadow-lg rounded-lg text-center">
+                <div class="h-64 bg-stone-200 mb-4 rounded overflow-hidden flex items-center justify-center text-stone-400">Perfume Image</div>
+                <h4 class="font-semibold text-xl">Royal Oud</h4>
+                <p class="text-stone-500 mb-4">Deep, Woody & Long Lasting</p>
+                <p class="text-yellow-700 font-bold text-lg mb-4">Rs. 4,500</p>
+                <button onclick="alert('Added to cart!')" class="w-full bg-stone-900 text-white py-2 hover:bg-yellow-700 transition">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 shadow-lg rounded-lg text-center border-2 border-yellow-700">
+                <div class="h-64 bg-stone-200 mb-4 rounded overflow-hidden flex items-center justify-center text-stone-400">Attar Image</div>
+                <h4 class="font-semibold text-xl">Jannat-ul-Firdous</h4>
+                <p class="text-stone-500 mb-4">Premium Traditional Attar</p>
+                <p class="text-yellow-700 font-bold text-lg mb-4">Rs. 2,000</p>
+                <button onclick="alert('Added to cart!')" class="w-full bg-stone-900 text-white py-2 hover:bg-yellow-700 transition">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 shadow-lg rounded-lg text-center">
+                <div class="h-64 bg-stone-200 mb-4 rounded overflow-hidden flex items-center justify-center text-stone-400">Fragrance Image</div>
+                <h4 class="font-semibold text-xl">Midnight Rose</h4>
+                <p class="text-stone-500 mb-4">Floral & Elegant French Mist</p>
+                <p class="text-yellow-700 font-bold text-lg mb-4">Rs. 3,200</p>
+                <button onclick="alert('Added to cart!')" class="w-full bg-stone-900 text-white py-2 hover:bg-yellow-700 transition">Add to Cart</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="bg-stone-900 text-white py-20 px-6">
+        <div class="max-w-3xl mx-auto text-center">
+            <h3 class="serif text-4xl mb-6">Visit Our Fragrance Studio</h3>
+            <p class="mb-8 text-stone-400">Order now via WhatsApp for special discounts and fast delivery.</p>
+            <a href="https://wa.me/yournumberhere" class="bg-green-600 px-10 py-4 rounded-full font-bold inline-block hover:bg-green-700 transition">Order on WhatsApp</a>
+        </div>
+    </section>
+
+    <footer class="py-10 text-center text-stone-500 text-sm">
+        &copy; 2024 Jamilas Fragrance. All rights reserved.
+    </footer>
+
+</body>
+</html>
